--- a/app/views/booking_types/new.html.erb
+++ b/app/views/booking_types/new.html.erb
@@ -1,5 +1,7 @@
 <div class="max-w-3xl mx-auto px-4">
-  <h1 class="font-bold text-3xl mb-6">New booking_type</h1>
+  <div class="flex items-center justify-between">
+    <h1 class="font-bold text-3xl mb-6">New booking_type</h1>
+  </div>
 
   <%= render 'form', booking_type: @booking_type %>
 </div>
