--- a/app/views/booking_types/_form.html.erb
+++ b/app/views/booking_types/_form.html.erb
@@ -12,37 +12,39 @@
 <% end %>
 
   <div class="mb-6">
-        <%= form.label :name, class: label_class %>
-          <%= form.text_field :name, class: input_class %>
-      </div>
+    <%= form.label :name, class: label_class %>
+    <%= form.text_field :name, class: input_class %>
+  </div>
+
   <div class="mb-6">
-        <%= form.label :location, class: label_class %>
-          <%= form.text_field :location, class: input_class %>
-      </div>
+    <%= form.label :location, class: label_class %>
+    <%= form.text_field :location, class: input_class %>
+  </div>
+
   <div class="mb-6">
-        <%= form.label :description, class: label_class %>
-          <%= form.rich_text_area :description, class: input_class %>
-      </div>
+    <%= form.label :description, class: label_class %>
+    <%= form.rich_text_area :description, class: input_class %>
+  </div>
+
   <div class="mb-6">
-        <%= form.label :color, class: label_class %>
-          <%= form.text_field :color, class: input_class %>
-      </div>
+    <%= form.label :color, class: label_class %>
+    <%= form.text_field :color, class: input_class %>
+  </div>
+
   <div class="mb-6">
-        <%= form.label :duration, class: label_class %>
-          <%= form.number_field :duration, class: input_class %>
-      </div>
-  <div class="mb-6">
-        <%= form.label :payment_required, class: label_class %>
-          <%= form.check_box :payment_required, class: input_class %>
-      </div>
-  <div class="mb-6">
-        <%= form.label :price, class: label_class %>
-          <%= form.number_field :price, class: input_class %>
-      </div>
-  <div class="mb-6">
-        <%= form.label :user_id, class: label_class %>
-          <%= form.text_field :user_id, class: input_class %>
-      </div>
+    <%= form.label :duration, class: label_class %>
+    <%= form.number_field :duration, class: input_class %>
+  </div>
+
+  <div class="mb-6 flex items-center">
+    <%= form.check_box :payment_required, class: checkbox_class %>
+    <%= form.label :payment_required, class: label_class %>
+  </div>
+
+  <div class="mb-6 lg:w-1/4">
+    <%= form.label :price, class: label_class %>
+    <%= form.number_field :price, class: input_class %>
+  </div>
 
 <%= form.submit class: button_class(theme: 'primary') %>
 
